# documentation

./: .editorconfig  .gitignore  CLAUDE.md  README.md  Taskfile.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: index.md  index.pl.md  index.ru.md  project_info.yml
docs/api/: rest_api.ru.md
