[project]
name = "napramak-documentation"
version = "0.1.0"
description = "Python dependencies for the Napramak documentation."
requires-python = ">=3.11"
dependencies = [
    "mkdocs-autorefs>=1.0.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-macros-plugin>=1.0.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-static-i18n>=1.3.0",
    "mkdocs-swagger-ui-tag>=0.6.0",
    "mkdocs>=1.5.0",
    "pymdown-extensions>=10.0.0",
]

[dependency-groups]
dev = []
